<resources>
    <string name="app_name">HikeSpot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="log_out">Logout</string>
    <string name="change_picture">Change Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
</resources>